Group NodeTypes into a cookie group

--- a/Configuration/NodeTypes.Content.CookieSettings.yaml
+++ b/Configuration/NodeTypes.Content.CookieSettings.yaml
@@ -11,6 +11,7 @@
   ui:
     label: 'Cookie Settings'
     icon: 'icon-cookie'
+    group: 'cookies'
     inlineEditable: true
     inspector:
       groups:
