--- a/Configuration/NodeTypes.Content.NecessaryCookieGroup.yaml
+++ b/Configuration/NodeTypes.Content.NecessaryCookieGroup.yaml
@@ -3,3 +3,4 @@
     'KaufmannDigital.GDPR.CookieConsent:Content.CookieGroup': true
   ui:
     label: 'Notwendige Cookies Gruppe'
+    group: 'cookies'
