--- a/Configuration/NodeTypes.Content.Cookie.Attribute.yaml
+++ b/Configuration/NodeTypes.Content.Cookie.Attribute.yaml
@@ -1,6 +1,7 @@
 'KaufmannDigital.GDPR.CookieConsent:Content.Cookie.Attribute':
   superTypes:
     'Neos.Neos:Content': true
+    'KaufmannDigital.GDPR.CookieConsent:Mixin.Cookie': true
   ui:
     label: i18n
     icon: 'icon-cookie'
