--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -25,3 +25,10 @@ KaufmannDigital:
     CookieConsent:
       siteCSSFilepath: null
       customCSSFilepath: null
+      siteStyles: []
+#        "rootNode name 1":
+#          siteCSSFilepath: <link to site css>
+#          customCSSFilepath: <link to custom css>
+#        "rootNode name 1":
+#          siteCSSFilepath: <link to site css>
+#          customCSSFilepath: <link to custom css>
