Feature: Implement different consents per dimensions

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -26,6 +26,10 @@ KaufmannDigital:
       siteCSSFilepath: null
       customCSSFilepath: null
       consentLogEnabled: false
+      consentDimensions: []
+# See README.md
+#        - language
+#        - country
       siteStyles: []
 #        "rootNode name 1":
 #          siteCSSFilepath: <link to css>
