--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -37,3 +37,5 @@ KaufmannDigital:
 #        "rootNode name 2":
 #          siteCSSFilepath: <link to css>
 #          customCSSFilepath: <link to custom css>
+      backend:
+        includeGeneratedJs: true
