Feature: Make cookie name adjustable

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -27,6 +27,7 @@ KaufmannDigital:
       customCSSFilepath: null
       consentLogEnabled: false
       consentDimensions: []
+      cookieName: 'KD_GDPR_CC'
 # See README.md
 #        - language
 #        - country
