Feature: Re-open banner after time

--- a/Configuration/NodeTypes.Content.CookieSettings.yaml
+++ b/Configuration/NodeTypes.Content.CookieSettings.yaml
@@ -123,7 +123,7 @@
         label: i18n
         inspector:
           group: cookieSettings
-    cookieTtl:
+    decisionTtl:
       type: integer
       defaultValue: 31536000
       ui:
