[task] Feature: Exclude for Documents via configurable CookieSettings property excludedDocuments. It is now possible to choose eg Imprint and Legal and don't display the GDPR dialog there

--- a/Configuration/NodeTypes.Content.CookieSettings.yaml
+++ b/Configuration/NodeTypes.Content.CookieSettings.yaml
@@ -142,3 +142,13 @@
           message: i18n
         inspector:
           group: cookieSettings
+    excludedDocuments:
+      type: references
+      ui:
+        inspector:
+          editorOptions:
+            nodeTypes:
+              - 'Neos.Neos:Document'
+          group: cookieSettings
+        label: i18n
+        reloadIfChanged: true
