--- a/Configuration/Settings.KaufmannDigital.yaml
+++ b/Configuration/Settings.KaufmannDigital.yaml
@@ -22,3 +22,4 @@ KaufmannDigital:
       excludeDocumentNodeTypes: []
       # See README.md
       # - 'Vendor.Package:Document.Imprint'
+      hideBeforeInteraction: false
