--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         }
     ],
     "require": {
-        "neos/neos": ">=5.0",
-        "shel/neos-colorpicker": "*"
+        "neos/neos": ">=5.0"
     },
     "autoload": {
         "psr-4": {
