FEATURE add CORS whitelist

--- a/Configuration/Settings.KaufmannDigital.yaml
+++ b/Configuration/Settings.KaufmannDigital.yaml
@@ -31,3 +31,6 @@ KaufmannDigital:
         #  'gdpr-cc': 'accept-all'
         acceptNecessary: []
         #  'gdpr-cc': 'accept-needed'
+      allowedOrigins: []
+      # - domain.de
+      # - subdomain.domain.de
