Feature: configurable cookie lifetime

--- a/Configuration/Settings.KaufmannDigital.yaml
+++ b/Configuration/Settings.KaufmannDigital.yaml
@@ -34,3 +34,5 @@ KaufmannDigital:
       allowedOrigins: []
       # - domain.de
       # - subdomain.domain.de
+      # lifetime in days
+      cookieLifetime: 365
