Task: Allow to set time on versionDate

--- a/Configuration/NodeTypes.Content.CookieSettings.yaml
+++ b/Configuration/NodeTypes.Content.CookieSettings.yaml
@@ -138,6 +138,8 @@
         label: i18n
         inspector:
           group: cookieSettings
+          editorOptions:
+            format: 'd.m.Y H:i'
     decisionTtl:
       type: integer
       defaultValue: 0
