--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "neos/neos": ">=5.0 <=9.0"
+        "neos/neos": ">=5.0 <9.0"
     },
     "autoload": {
         "psr-4": {
