TASK: Apply migration Neos.Flow-20201003165200
Make default ValueObjects embedded=false

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
             "Neos.Neos.Ui-20190319094900",
             "Neos.Flow-20190425144900",
             "Neos.Flow-20190515215000",
-            "Neos.Flow-20200813181400"
+            "Neos.Flow-20200813181400",
+            "Neos.Flow-20201003165200"
         ]
     }
 }
