TASK: Apply migration Neos.Kickstart-20161124230102
Adjusts code to Kickstarter Renaming

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
             "package-key": "KaufmannDigital.GDPR.CookieConsent"
         },
         "applied-flow-migrations": [
-            "Neos.Party-20161124225257"
+            "Neos.Party-20161124225257",
+            "Neos.Kickstart-20161124230102"
         ]
     }
 }
