--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
             "Neos.Seo-20170127154600",
             "Neos.Flow-20180415105700",
             "Neos.Neos-20180907103800",
-            "Neos.Neos.Ui-20190319094900"
+            "Neos.Neos.Ui-20190319094900",
+            "Neos.Flow-20190425144900"
         ]
     }
 }
