--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "applied-flow-migrations": [
             "Neos.Party-20161124225257",
             "Neos.Kickstart-20161124230102",
-            "Neos.Imagine-20161124231742"
+            "Neos.Imagine-20161124231742",
+            "Neos.Kickstarter-20161125110814"
         ]
     }
 }
