TASK: Apply migration Neos.Neos-20220318111600
Replace legacy content cache tag definitions in Fusion

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
             "Neos.Flow-20201003165200",
             "Neos.Flow-20201109224100",
             "Neos.Flow-20201205172733",
-            "Neos.Flow-20201207104500"
+            "Neos.Flow-20201207104500",
+            "Neos.Neos-20220318111600"
         ]
     }
 }
