TASK: Apply migration Neos.Party-20161124225257
Adjusts code to package renaming from "TYPO3.Party" to "Neos.Party"

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
     "extra": {
         "neos": {
             "package-key": "KaufmannDigital.GDPR.CookieConsent"
-        }
+        },
+        "applied-flow-migrations": [
+            "Neos.Party-20161124225257"
+        ]
     }
 }
