--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
             "Neos.Flow-20201205172733",
             "Neos.Flow-20201207104500",
             "Neos.Neos-20220318111600",
-            "Neos.Flow-20220318174300"
+            "Neos.Flow-20220318174300",
+            "Neos.Fusion-20220326120900"
         ]
     }
 }
