--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
             "Neos.Flow-20201109224100",
             "Neos.Flow-20201205172733",
             "Neos.Flow-20201207104500",
-            "Neos.Neos-20220318111600"
+            "Neos.Neos-20220318111600",
+            "Neos.Flow-20220318174300"
         ]
     }
 }
