TASK: Apply migration Neos.Imagine-20161124231742
Adjusts code to Imagine Renaming

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         },
         "applied-flow-migrations": [
             "Neos.Party-20161124225257",
-            "Neos.Kickstart-20161124230102"
+            "Neos.Kickstart-20161124230102",
+            "Neos.Imagine-20161124231742"
         ]
     }
 }
