TASK: Apply migration Neos.Workspace.Ui-20240603134000
Update privilege names related to the workspace module in custom roles
used

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
             "Neos.Neos-20220318111600",
             "Neos.Flow-20220318174300",
             "Neos.Fusion-20220326120900",
-            "Neos.Neos-20230801154834"
+            "Neos.Neos-20230801154834",
+            "Neos.Workspace.Ui-20240603134000"
         ]
     }
 }
