--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
             "Neos.Flow-20190515215000",
             "Neos.Flow-20200813181400",
             "Neos.Flow-20201003165200",
-            "Neos.Flow-20201109224100"
+            "Neos.Flow-20201109224100",
+            "Neos.Flow-20201205172733"
         ]
     }
 }
