--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
             "Neos.Party-20161124225257",
             "Neos.Kickstart-20161124230102",
             "Neos.Imagine-20161124231742",
-            "Neos.Kickstarter-20161125110814"
+            "Neos.Kickstarter-20161125110814",
+            "Neos.Seo-20170127154600"
         ]
     }
 }
