--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
             "Neos.Imagine-20161124231742",
             "Neos.Kickstarter-20161125110814",
             "Neos.Seo-20170127154600",
-            "Neos.Flow-20180415105700"
+            "Neos.Flow-20180415105700",
+            "Neos.Neos-20180907103800"
         ]
     }
 }
