--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
             "Neos.Flow-20201207104500",
             "Neos.Neos-20220318111600",
             "Neos.Flow-20220318174300",
-            "Neos.Fusion-20220326120900"
+            "Neos.Fusion-20220326120900",
+            "Neos.Neos-20230801154834"
         ]
     }
 }
