--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
             "Neos.Kickstart-20161124230102",
             "Neos.Imagine-20161124231742",
             "Neos.Kickstarter-20161125110814",
-            "Neos.Seo-20170127154600"
+            "Neos.Seo-20170127154600",
+            "Neos.Flow-20180415105700"
         ]
     }
 }
