TASK: Apply migration Neos.Neos.Ui-20190319094900
Migrate additional RTE formatting configuration to new format

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
             "Neos.Kickstarter-20161125110814",
             "Neos.Seo-20170127154600",
             "Neos.Flow-20180415105700",
-            "Neos.Neos-20180907103800"
+            "Neos.Neos-20180907103800",
+            "Neos.Neos.Ui-20190319094900"
         ]
     }
 }
